<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:background="@drawable/task_item_res">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:orientation="horizontal"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/movieImageId"
            android:layout_width="155dp"
            android:layout_height="match_parent"
            android:src="@drawable/placeholder" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tituloMovieId"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:lines="2"
                android:maxLines="2"
                android:text="@string/titulo"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="40dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/paisMovie"
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:layout_weight="1"
                        android:text="@string/pais"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/yearMovie"
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:layout_weight="1"
                        android:text="@string/year"
                        android:textSize="20sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="150dp"
                    android:layout_height="match_parent"
                    android:layout_weight="10"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/paisMovieId"
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:layout_weight="1"
                        android:text="@string/pais"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/yearMovieId"
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:layout_weight="1"
                        android:text="@string/year"
                        android:textSize="20sp" />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>